<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.admin.AdminMainFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/wallpaper"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:src="@drawable/splash_app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/adminLoginNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/adminPanelText"
            app:layout_constraintBottom_toBottomOf="@id/wallpaper"
            app:layout_constraintEnd_toStartOf="@id/logoutAdminBTN"
            app:layout_constraintStart_toEndOf="@id/wallpaper"
            app:layout_constraintTop_toTopOf="@id/wallpaper" />

        <Button
            android:id="@+id/logoutAdminBTN"
            style="@style/buttonStyle"
            android:text="@string/logout"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="@id/wallpaper"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/placeRequestsFragmentBTN"
            style="@style/buttonStyle"
            android:text="@string/placeRequestCheck"
            app:layout_constraintTop_toBottomOf="@id/wallpaper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/commentsFragmentBTN"/>

        <Button
            android:id="@+id/commentsFragmentBTN"
            style="@style/buttonStyle"
            android:layout_margin="@dimen/text_5d"
            android:text="@string/commentRequestCheck"
            app:layout_constraintTop_toBottomOf="@id/placeRequestsFragmentBTN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>