<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/mint_cream"
        tools:context=".view.authentication.RegisterFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/registerPageLogo"
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/registerPageWelcomeMessage"
                    android:padding="-40dp"
                    app:layout_constraintBottom_toTopOf="@+id/registerPageWelcomeMessage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/splash_app_logo" />

                <TextView
                    android:id="@+id/registerPageWelcomeMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registerPageWelcomeMessage"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/registerPageLogo" />

                <EditText
                    android:autofillHints="name"
                    android:id="@+id/registerName"
                    android:layout_width="228dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:hint="@string/nameSurname"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerPageWelcomeMessage" />



                <EditText
                    android:autofillHints="emailAddress"
                    android:id="@+id/registerEmail"
                    android:layout_width="228dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/emailRegister"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="@id/registerName"
                    app:layout_constraintStart_toStartOf="@id/registerName"
                    app:layout_constraintTop_toBottomOf="@id/registerName"
                     />

                <EditText
                    android:autofillHints="password"
                    android:id="@+id/registerPassword2"
                    android:layout_width="228dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/passwordAgain"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@+id/registerPassword"
                    app:layout_constraintStart_toStartOf="@+id/registerPassword"
                    app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

                <Button
                    android:id="@+id/btn_back"
                    style="@style/buttonStyle"
                    android:layout_marginStart="76dp"
                    android:text="@string/goBack"
                    android:textAllCaps="false"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btnRegister"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/buttonStyle"
                    android:layout_marginTop="16dp"
                    android:text="@string/signUp"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_back"
                    app:layout_constraintTop_toBottomOf="@+id/registerPassword2"
                    app:layout_constraintVertical_bias="1.0" />

                <EditText
                    android:autofillHints="password"
                    android:id="@+id/registerPassword"
                    android:layout_width="228dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="@+id/registerEmail"
                    app:layout_constraintStart_toStartOf="@+id/registerEmail"
                    app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

                <ProgressBar
                    android:id="@+id/progressBarRegister"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="255"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />





            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </RelativeLayout>
</layout>