<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.splashAndOnBoard.screens.FifthScreen">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="350dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fifthscreenonboard" />


    <TextView
        android:id="@+id/mainDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textColor="@color/detail_city_txt_color"
        android:text="@string/fifthScreenOnBoardOneText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintBottom_toTopOf="@id/mainDescription2"/>
    <TextView
        android:id="@+id/mainDescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/detail_city_txt_color"
        android:text="@string/fifthScreenOnBoardTwoText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainDescription"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/onboarding_airplane"
        android:text="@string/finishOnBoard"
        android:textAllCaps="false"
        android:textSize="@dimen/text_19d"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/pink"
        android:color="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>